Initial commin containing html template for activities

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'material-icons/css/material-icons.css';
+@import '~bootstrap/dist/css/bootstrap.css';
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+.m-2 {
+	margin: 2rem
+}
+
+.m-1 {
+	margin: 1rem
+}
