Update to angular 9 and add ngrx dependencies

--- a/src/app/pages/activity-report/activity-report.component.html
+++ b/src/app/pages/activity-report/activity-report.component.html
@@ -10,7 +10,19 @@
   </div>
 </div>
 <mat-divider></mat-divider>
-
-
-
-
+<div class="row">
+  <div class="col text-center">
+    <tt-activity-period-chooser></tt-activity-period-chooser>
+  </div>
+</div>
+<div class="row">
+  <div class="col">
+    <tt-activity-report-table></tt-activity-report-table>
+  </div>
+</div>
+<div class="mt-4 row">
+  <div class="col text-center">
+    <span class="mr-1"><button mat-stroked-button color="basic">Add To Archive</button></span>
+    <span class="ml-1"><button mat-stroked-button color="basic">Synchronize</button></span>
+  </div>
+</div>
