Add state for activities and implement action addActivity

--- a/src/app/shared/components/activity-item/activity-item.component.html
+++ b/src/app/shared/components/activity-item/activity-item.component.html
@@ -2,7 +2,7 @@
 <div (click)="openReport()" class="item-content row mt-3">
   <div class="col-7">
     <div class="activity-item-title">
-        <div class="activity-item-title-name">Prace Tracker 1</div>
+        <div class="activity-item-title-name">{{activity.name}}</div>
         <div class="activity-item-title-desc">Last duration: 6h 52m</div>
       </div>
   </div>
