--- a/src/app/shared/components/activity-period-chooser/activity-period-chooser.component.html
+++ b/src/app/shared/components/activity-period-chooser/activity-period-chooser.component.html
@@ -3,9 +3,9 @@
     <span class="mr-1">
       <mat-form-field>
         <mat-label>Year</mat-label>
-        <mat-select>
-          <mat-option>
-            2020
+        <mat-select (selectionChange)="onYearSelected($event.value)">
+          <mat-option *ngFor="let year of years" [value]="year">
+          {{year}}
           </mat-option>
         </mat-select>
       </mat-form-field>
@@ -13,9 +13,9 @@
         <span class="ml-1">
       <mat-form-field>
         <mat-label>Month</mat-label>
-        <mat-select>
-          <mat-option>
-            January
+        <mat-select (selectionChange)="onMonthSelected($event.value)">
+          <mat-option *ngFor="let month of months" [value]="month">
+          {{getReadableMonth(month)}}
           </mat-option>
         </mat-select>
       </mat-form-field>
