Add finished report page and prod build

--- a/src/app/pages/activity-report/activity-report.component.html
+++ b/src/app/pages/activity-report/activity-report.component.html
@@ -1,6 +1,6 @@
 <div class="row mt-4">
   <div class="ml-3 col-2" >
-    <span (click)="goToActivities()" class="material-icons">arrow_back_ios</span>
+    <span (click)="goToActivities()" class="material-icons pointer">arrow_back_ios</span>
   </div>
   <div class="col-6">
     <h4>{{activity.name}}</h4>
