--- a/src/app/shared/components/activity-item/activity-item.component.html
+++ b/src/app/shared/components/activity-item/activity-item.component.html
@@ -1,5 +1,5 @@
 <mat-divider></mat-divider>
-<div (click)="openReport()" class="item-content row mt-3">
+<div (click)="openReport()" class="item-content row mt-3 pointer">
   <div class="col-8">
     <div class="activity-item-title">
         <div class="activity-item-title-name">{{activity.name}}</div>
