Fix Minor visual bugs

--- a/src/app/pages/activity-report/activity-report.component.html
+++ b/src/app/pages/activity-report/activity-report.component.html
@@ -2,7 +2,7 @@
   <div class="ml-3 col-2" >
     <span (click)="goToActivities()" class="material-icons pointer">arrow_back_ios</span>
   </div>
-  <div class="col-6">
+  <div class="col-6 activity-name">
     <h4>{{activity.name}}</h4>
   </div>
   <div class="col-2 mb-2">
