Disable autocomplete for new activity name

--- a/src/app/shared/components/new-activity/new-activity.component.html
+++ b/src/app/shared/components/new-activity/new-activity.component.html
@@ -3,7 +3,7 @@
     <span class="m-2">
       <mat-form-field style="width:60vw">
         <mat-label>Start a new activity</mat-label> 
-        <input matInput matAutosize="'false" placeholder="Type name of the activity" [value]='activityName' (input)='activityName = $event.target.value'>
+        <input matInput autocomplete="off" matAutosize="'false" placeholder="Type name of the activity" [value]='activityName' (input)='activityName = $event.target.value'>
       </mat-form-field>
     </span>
     <span class="m-2"> 
